# iceberg-basics

./: pyproject.toml
notebooks/: iceberg.ipynb
warehouse/db/orders/data/: .00003-3-6b21eeac-8c26-4f0c-af63-7ede10773c6b-0-00001.parquet.crc  .00004-28-bb3b92e5-3a6b-4878-b721-bd9236d976f5-0-00001.parquet.crc  .00006-6-6b21eeac-8c26-4f0c-af63-7ede10773c6b-0-00001.parquet.crc  .00009-33-bb3b92e5-3a6b-4878-b721-bd9236d976f5-0-00001.parquet.crc  .00009-9-6b21eeac-8c26-4f0c-af63-7ede10773c6b-0-00001.parquet.crc  00003-3-6b21eeac-8c26-4f0c-af63-7ede10773c6b-0-00001.parquet  00004-28-bb3b92e5-3a6b-4878-b721-bd9236d976f5-0-00001.parquet  00006-6-6b21eeac-8c26-4f0c-af63-7ede10773c6b-0-00001.parquet  00009-33-bb3b92e5-3a6b-4878-b721-bd9236d976f5-0-00001.parquet  00009-9-6b21eeac-8c26-4f0c-af63-7ede10773c6b-0-00001.parquet
warehouse/db/orders/metadata/: .2ce18663-b7d6-4579-9efd-f86bcee04869-m0.avro.crc  .bab65465-46a7-4c62-8915-298374a9bd25-m0.avro.crc  .snap-549342836411795743-1-2ce18663-b7d6-4579-9efd-f86bcee04869.avro.crc  .snap-7192975603116258646-1-bab65465-46a7-4c62-8915-298374a9bd25.avro.crc  .v1.metadata.json.crc  .v2.metadata.json.crc  .v3.metadata.json.crc  2ce18663-b7d6-4579-9efd-f86bcee04869-m0.avro  bab65465-46a7-4c62-8915-298374a9bd25-m0.avro  snap-549342836411795743-1-2ce18663-b7d6-4579-9efd-f86bcee04869.avro  snap-7192975603116258646-1-bab65465-46a7-4c62-8915-298374a9bd25.avro  v1.metadata.json  v2.metadata.json  v3.metadata.json
warehouse/db/sales/metadata/: .dd45add0-8919-449e-8903-ccf4fc79cc09-m0.avro.crc  .v1.metadata.json.crc  .v2.metadata.json.crc  (+5 more)
(+6 files in other folders)
