[project]
name = "iceberg-mastery"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastavro>=1.9.0",
    "ipykernel>=6.29.0",
    "pyspark==3.5.3",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "jupyterlab>=4.3.0",
]
